test/driver/test_non_compressible_suffix.mlt
open Ppxlib;;
open Ppx_core;;
open Ast_builder.Default;;

Driver.register_transformation "blah"
  ~rules:[ Context_free.Rule.extension
             (Extension.declare "foo"
                Expression
                Ast_pattern.(pstr nil)
                (fun ~loc ~path:_ -> eint ~loc 42))
         ; Context_free.Rule.extension
             (Extension.declare "@foo.bar"
                Expression
                Ast_pattern.(pstr nil)
                (fun ~loc ~path:_ -> eint ~loc 42))
         ]
;;

#verbose true;;

[%foo];;

[%%expect{|
- : int = 42
|}];;

[%foo.bar];;

[%%expect{|
- : int = 42
|}];;

[%bar];;

[%%expect{|
Line _, characters 2-5:
Error: Extension `bar' was not translated
|}]
